src/visualization-kibana/overlays/staging/allow-schedule-on-specific-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualization-kibana
spec:
  template:
    spec:
      nodeSelector:
        node-role.sigmaott.com/api: 'true'
