src/visualization-kibana/overlays/staging/change-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualization-kibana
spec:
  template:
    spec:
      containers:
        - name: kibana
