src/visualization-kibana/overlays/staging/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: visualization-kibana
spec:
  entryPoints: 
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/kibana`)
      services:
        - kind: Service
          name: visualization-kibana
          namespace: staging-visualization
          port: 5601
          strategy: RoundRobin
